Fixed ios build issues

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-native-scanner-zebra",
-  "version": "0.1.0",
-  "description": "",
+  "title": "React Native Scanner Zebra",
+  "version": "0.1.1",
+  "description": "React Native module for Zebra barcode scanners",
   "homepage": "https://github.com/crypton-tech/react-native-scanner-zebra#readme",
   "baseUrl": "https://github.com/crypton-tech/react-native-scanner-zebra",
   "main": "lib/index.js",
