--- a/.nmprc
+++ b/.nmprc
@@ -1,1 +1,3 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+@cryptontech:registry=https://registry.npmjs.org/
+always-auth=true
